k8s/apps/votcha/logging/06-ingress-rule/elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: votcha-dev
  annotations:
    # Sadece HTTPS el sıkışma kuralları kaldı, rewrite ve regex satırlarını sildik
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.votcha-monitoring.com
      secretName: votcha-tls
  rules:
    - host: www.votcha-monitoring.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: votcha-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.votcha-monitoring.com
      secretName: votcha-tls
  rules:
    - host: www.votcha-monitoring.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
